Refactor facebook api client & clean up

--- a/templates/facebook-inbox.twig
+++ b/templates/facebook-inbox.twig
@@ -13,14 +13,18 @@
 </div>
 <div class="row">
     {#<div class="small-12 columns small-text"> Threads: {{ inbox.unread }} unread, {{ inbox.unseen }}#}
-        {#unseen </span>#}
+    {#unseen </span>#}
     {#</div>#}
 
     <div class="row">
         <div class="small-12 columns small-text">
             <ul class="no-bullet">
+                <li>
+                    <a href="/facebook?until={{ inbox.previousPage.until }}&since={{ inbox.previousPage.since }}&__previous={{ inbox.previousPage.__previous }}&limit={{ inbox.previousPage.limit }}&__paging_token={{ inbox.previousPage.__paging_token }}">
+                        previous
+                    </a>
+                </li>
                 {% for thread in inbox.threads %}
-                    <hr>
                     <li>
                         <a href="/facebook/thread/{{ thread.id }}">
                             <span class="label info">{{ thread.users }}:</span>
@@ -37,14 +41,20 @@
                             {% endfor %}
                         </ul>
                     </li>
+                    <hr>
                 {% endfor %}
+                <li>
+                    <a href="/facebook?until={{ inbox.nextPage.until }}&since={{ inbox.nextPage.since }}&__previous={{ inbox.nextPage.__previous }}&limit={{ inbox.nextPage.limit }}&__paging_token={{ inbox.nextPage.__paging_token }}">
+                        next
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
 
     <div class="row">
         <div class="small-12 columns">
-            Logged in as: {{ fbUserName }}, id: {{ fbId }}
+            {#Logged in as: {{ fbUserName }}, id: {{ fbId }}#}
         </div>
     </div>
     <div class="row">
