--- a/templates/facebook-thread.twig
+++ b/templates/facebook-thread.twig
@@ -62,7 +62,7 @@
     </div>
     <div class="row">
         <div class="small-12 columns">
-            Logged in as: {{ fbUserName }}, id: {{ fbId }}
+            {#Logged in as: {{ fbUserName }}, id: {{ fbId }}#}
         </div>
     </div>
     {#<div class="row">#}
