--- a/templates/bodylayout.twig
+++ b/templates/bodylayout.twig
@@ -14,6 +14,9 @@
             <section class="top-bar-section">
                 <ul class="right">
                     <li class="">
+                        <a class="text-left" href="/facebook/notifications">Notifications</a>
+                    </li>
+                    <li class="">
                         <a class="text-left" href="/angular/">Angular</a>
                     </li>
                     <li>
