--- a/templates/bodylayout.twig
+++ b/templates/bodylayout.twig
@@ -8,7 +8,9 @@
                     <h1><a href="/">HHjovo hriste</a></h1>
                 </li>
                 <!--Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone-->
-                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+                <li class="toggle-topbar menu-icon"><a href="#">
+                        <span>Menu</span>
+                    </a></li>
             </ul>
 
             <section class="top-bar-section">
