--- a/templates/facebook-message.twig
+++ b/templates/facebook-message.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="small-12 columns">
             {#<a href="#" id="showAllBtn" class="button sucess tiny">Show unread</a>#}
-            {#<a href="#" id="reloadBtn" class="button warning tiny">Reload</a>#}
+            <a href="#" id="reloadBtn" class="button warning tiny">Reload</a>
             {#<a href="/facebook/thread/count/{{ thread.id }}" id="countBtn" class="button summary tiny">Count</a>#}
         </div>
     </div>
@@ -55,11 +55,11 @@
             </ul>#}
         </div>
     </div>
-    <div class="row">
+{#    <div class="row">
         <div class="small-12 columns">
             Logged in as: {{ fbUserName }}, id: {{ fbId }}
         </div>
-    </div>
+    </div>#}
     {#<div class="row">#}
         {#<div class="small-12 columns">#}
             {#<a class="button tiny" href="{{ logoutUrl }}">Facebook logout</a>#}
