--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -18,23 +18,23 @@
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-KXJQXSR');</script>
     <!-- End Google Tag Manager -->
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    {#<script>#}
+        {#(function(i, s, o, g, r, a, m) {#}
+            {#i['GoogleAnalyticsObject'] = r;#}
+            {#i[r] = i[r] || function() {#}
+                        {#(i[r].q = i[r].q || []).push(arguments)#}
+                    {#}, i[r].l = 1 * new Date();#}
+            {#a = s.createElement(o),#}
+                    {#m = s.getElementsByTagName(o)[0];#}
+            {#a.async = 1;#}
+            {#a.src = g;#}
+            {#m.parentNode.insertBefore(a, m)#}
+        {#})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');#}
 
-        ga('create', 'UA-62264970-2', 'auto');
-        ga('send', 'pageview');
+        {#ga('create', 'UA-62264970-2', 'auto');#}
+        {#ga('send', 'pageview');#}
 
-    </script>
+    {#</script>#}
 
     <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
